[package]
name = "code-open-server"
version = "0.1.0"
authors = ["Akihiro Shoji <alpha.kai.net@alpha-kai-net.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
code-open-common = { path = "../code-open-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "0.15.5"
shellexpand = "2.1.0"
once_cell = "1.9.0"
clap = "2.33.3"
dirs = "3.0.2"
