[package]
name = "code-open"
version = "0.1.0"
authors = ["Akihiro Shoji <alpha.kai.net@alpha-kai-net.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
code_open_common = { path = "../code_open_common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "0.15.4"
gethostname = "0.2.1"
shellexpand = "2.1.0"
path-absolutize = "3.0.6"
